--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NODE_ENV=development #production if you are deploying to production
 
 #Database
 # MONGO_URI=mongodb+srv://<username>:<password>@<cluster>/<database>?retryWrites=true&w=majority
-MONGO_URI=mongodb://127.0.0.1:27017/markham_college?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:hsDnYvUzsLzHPizM@cluster0.zyreg9c.mongodb.net/markham_college?retryWrites=true&w=majority&appName=Cluster0
 
 #Client URL
 CLIENT_URL=http://localhost:3000
